# Mathics

./: .coveragerc  .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CHANGES.rst  COPYING.txt  FUTURE.rst  MANIFEST.in  Makefile  README.rdoc  README.rst  data  distribute_setup.py  docker-compose.yml  index.html  initialize.py  install_sage_scripts.py  kernel.json  logs  mathicskernel.py  params.json  release.sh  requirements-dev.txt  requirements-extra.txt  requirements-full.txt  setup.cfg  setup.py  tox.ini  travis.py
admin-tools/: check-versions.sh  git2cl  make-dist.sh  pyenv-versions  release.sh  time-mathmp-sympy-fns.py
app/: Dockerfile  entrypoint.sh  requirements-mathicsscript.txt  requirements-tmathics.txt  requirements.txt
docker/: Dockerfile  entrypoint.sh  requirements-mathicsscript.txt  requirements.txt
docs/: builtins.rst  conf.py  contributing-developing.rst  docs.md  releasing.rst  tmp.md
examples/: test_driver.m
imathics/: __main__.py  kernel.py  mathics.js  terminalapp.py
jupyter-mathics-kernel/: kernel.json  mathics-kernel.py  mathics_kernel.py
mathics/: Makefile  __init__.py  benchmark.py  docpipeline.py  kernel.py  main.py  manage.py  mathics_kernel.py  profile.py  profile_mathics.py  script.py  server.py  session.py  settings.py  system_info.py  test.py  test_django.py  tests.py  urls.py  version.py
pymathics/: .gitignore  Makefile  README.rst  __init__.py  mathics  setup.py  test.py
script/: dmathicsscript  dmathicsserver
test/: helper.py  test_algebra.py  test_arithmetic.py  test_assignment.py  test_assumptions.py  test_calculus.py  test_cellstotex.py  test_cli.py  (+38 more)
(+923 files in other folders)
